5.msa/k8s/ingress_cert.yml

# ingress-controller 설치 명령어
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml
# 이거 하면 elb가 3개 생기게 됨. (이건 alb가 아니ㅏ라 nlb임임)

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: yjchoi-ns
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1 #첫번쨰 prefix제거 --> msa 아키텍쳐에서 /member-service 붙여서 (gateway.yml) 에  있는거랑 비슷한거임.
    cert-manager.io/cluster-issuer: my-issuer
spec:
  tls:
  - hosts:
    - "server.youngjae.shop"
    secretName: server-youngjae-com-tls
  rules:
  - host: server.youngjae.shop  # 설정하려는 도메인 이름. 제외시에 elb(alb+nlb 싸잡아 부르는 말) 주소로도 접근할수 있는 모든 도메인 접근 가능.
    http:
      paths:
      - path: /member-service/(.*) #모든 url요청을 nginx-service로 라우팅 --> server.youngjae.shop/youngjae로 들어가야 nginx 화면이 나옴
        pathType: Prefix
        backend:
          service:
            name: yj-msa-member-service
            port:
              number: 80 # ingress-ctl --> ingress --> ingress-ctl --> sercive --> pod
      - path: /ordering-service/(.*) #모든 url요청을 nginx-service로 라우팅 --> server.youngjae.shop/youngjae로 들어가야 nginx 화면이 나옴
        pathType: Prefix
        backend:
          service:
            name: yj-msa-ordering-service
            port:
              number: 80 # ingress-ctl --> ingress --> ingress-ctl --> sercive --> pod
      - path: /product-service/(.*) #모든 url요청을 nginx-service로 라우팅 --> server.youngjae.shop/youngjae로 들어가야 nginx 화면이 나옴
        pathType: Prefix
        backend:
          service:
            name: yj-msa-product-service
            port:
              number: 80 # ingress-ctl --> ingress --> ingress-ctl --> sercive --> pod
